--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,14 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&family=Raleway:wght@100;700&display=swap');
+
+/*=====| clases generales |=====*/
+.flex-center-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .login{
-    position: relative;
     width: 100vw;
     height: 100vh;
     background-image: linear-gradient(180deg, var(--color-violeta) 0%, #A8A3FE 20%,white 60%);
@@ -10,9 +17,6 @@
 .login__img{
     height: 42%;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .form-login{
@@ -31,59 +35,18 @@
     margin: 10px;
 }
 
-.form-login-principal{
-    margin: 20px 10px;
-}
-
-.form-login-principal__titulo{
-    font-family: 'Mulish';
-    color: #9E9E9E;
-    font-size: 1.25rem;
-    font-weight: bold;
-    margin: 10px 0;
-}
-
-.form-login-principal__items{
-    width: 100%;
-    height: 50px;
-    margin: 10px 0 4px;
-}
-
-.form-login-principal__items input,
-.form-login-principal input{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    background-color: #f5f5f5;
-    font-size: 1.1rem;
-    padding: 0 20px;
-    color: #9E9E9E;
-    font-weight: bold;
-    font-family: 'Mulish', sans-serif;
-}
-
-.form-login-principal__items i{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 20px;
-    color: #9e9e9e;
-    font-size: 1.4rem;
-
-}
-
-.form-login-principal input::placeholder{
-    color: #9E9E9E;
-    font-weight: bold;
-    font-family: 'Mulish', sans-serif;
-}
-
 .form-login-principal__aviso{
+    background-color: #ffb3b3;
+    width: 100%;
+    height: calc(auto + 10px);
     color: red;
+    font-weight: bold;
     display: flex;
-    align-items: end;
+    align-items: center;
     padding: 0 5px;
-    margin: 0 0 10px;
+    padding: 4px;
+    border-radius: 5px;
+    margin: 7px 0 5px;
 }
 
 .form-login-principal__aviso--hidden{
@@ -92,27 +55,17 @@
 
 .form-login-principal__aviso p{
     font-size: .8rem;
+    font-family: 'Mulish';
     padding-left: 5px;
 }
 
 
-.form-login-principal a{
+.formulario--login a{
     color: #0F9980;
     font-family: 'Mulish', sans-serif;
     font-size: 1rem;
-    margin: 10px 0;
-}
-
-.form-login-principal > input[type="submit"]{
-    height: 50px;
-    background-image: linear-gradient(180deg, var(--color-violeta), #A8A3FE);
+    margin: 15px 0;
     font-weight: bold;
-    color: white;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #4D4D4D;
-    font-size: 1.15rem;
-    font-family: sans-serif;
-    margin-top: 20px;
 }
 
 .cabezera{
@@ -137,6 +90,7 @@
 
 .cabezera__contenido h3{
     font-family: 'Mulish';
+    text-align: center;
 }
 
 .cabezera__contenido i{
@@ -151,8 +105,9 @@
     border-radius: 60px 60px 0 0;
 }
 
-
+/*===================================*/
 /*=====| Estilos de formulario |=====*/
+/*===================================*/
 
 .formulario{
     width: 100%;
@@ -160,17 +115,31 @@
     padding: 30px;
 }
 
-.formulario__items{
+.formulario__items,
+.formulario__mensaje{
     width: 100%;
+    height: auto;
+    margin: 0 0 15px;
+}
+
+.formulario__items-input{
     height: 50px;
-    margin: 30px 0;
 }
 
-.formulario__items:first-child{
-    margin: 0 0 30px 0;
+.formulario__mensaje p{
+    color: #9E9E9E;
+    font-weight: bold;
 }
 
-.formulario__items input,
+.formulario__mensaje{
+    height: auto;
+}
+
+.menos-margen{
+    margin: 0 0 35px;
+}
+
+.formulario__items-input input,
 .formulario__items select,
 .formulario input{
     width: 100%;
@@ -184,17 +153,19 @@
     font-family: 'Mulish', sans-serif;
 }
 
+/* .formulario__items-input input{ border: 1px solid  green;} */
+
 .formulario__items select::-ms-expand {
     display: none;
 }
 
-.formulario__items i{
+.formulario__items-input > i{
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     right: 20px;
     color: #9e9e9e;
-    font-size: 1.75rem;
+    font-size: 1.5rem;
 }
 
 .formulario__items input::placeholder{
@@ -212,4 +183,105 @@
     -webkit-text-stroke-color: #4D4D4D;
     font-size: 1.15rem;
     font-family: sans-serif;
+    margin-top: 25px;
 }
+
+.formulario--login{ padding: 20px; }
+
+.formulario--login__titulo{
+    font-family: 'Mulish';
+    color: #9E9E9E;
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.formulario--login :nth-child(3){
+    margin: 0 0 10px;
+}
+
+/*===========================================*/
+/*=====| Estilos de Menu de Navegación |=====*/
+/*===========================================*/
+
+.menu{
+    width: 100%;
+    height: 50px;
+    background-color: #E2E0FF;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    padding: 3px;
+}
+
+.menu ul{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: 100%;
+    height: 50px;
+}
+
+.menu__item{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu__item a{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #5E5E5E;
+}
+
+.menu__item a i{
+    font-size: 1.4rem;
+    margin-bottom: 3px;
+}
+
+.menu__item a p{
+    font-size: .7rem;
+    font-family: 'Mulish', sans-serif;
+    font-weight: bold;
+}
+
+
+/*========================================*/
+/*=====| Estilos de menu de Usuario |=====*/
+/*========================================*/
+
+.menu-usuario{
+    z-index: 2;
+    right: 20px;
+    position: absolute;
+    border: 1px solid black;
+    border-radius: 20px;
+    display: none;
+}
+
+.menu-usuario ul li{
+    padding: 20px 50px;
+    text-align: center;
+    border-bottom: 1px solid black;
+    cursor: pointer;
+}
+
+.menu-usuario ul li:last-child{
+    border-bottom: none;
+}
+
+/*===================================*/
+/*=====|  |=====*/
+/*===================================*/
+/*===================================*/
+/*=====|  |=====*/
+/*===================================*/
+/*===================================*/
+/*=====|  |=====*/
+/*===================================*/
+/*===================================*/
+/*=====|  |=====*/
+/*===================================*/
